--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,20 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,java-web,eclipse
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,java-web,eclipse
 
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
+.flattened-pom.xml
+
 ### Eclipse ###
 .metadata
 bin/
