--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
 	    <artifactId>HikariCP</artifactId>
 	    <version>4.0.3</version>
 	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-context</artifactId>
+	    <version>5.3.7</version>
+	</dependency>
  	
   </dependencies>
 
