--- a/pom.xml
+++ b/pom.xml
@@ -120,16 +120,17 @@
 	    <artifactId>HikariCP</artifactId>
 	    <version>4.0.3</version>
 	</dependency>
+
 	
 	<dependency>
 	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-context</artifactId>
+	    <artifactId>spring-jdbc</artifactId>
 	    <version>5.3.7</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.springframework</groupId>
-	    <artifactId>spring-jdbc</artifactId>
+	    <artifactId>spring-webmvc</artifactId>
 	    <version>5.3.7</version>
 	</dependency>
  	
