--- a/pom.xml
+++ b/pom.xml
@@ -56,18 +56,6 @@
 		  <artifactId>slf4j-api</artifactId>
 		  <version>1.7.30</version>
 	</dependency>
-	
-	<dependency>
-	    <groupId>org.apache.logging.log4j</groupId>
-	    <artifactId>log4j-api</artifactId>
-	    <version>2.14.1</version>
-  	</dependency>
-	  
-  	<dependency>
-	    <groupId>org.apache.logging.log4j</groupId>
-	    <artifactId>log4j-core</artifactId>
-	    <version>2.14.1</version>
-  	</dependency>
   
 	<dependency>
 	    <groupId>org.apache.logging.log4j</groupId>
@@ -121,6 +109,13 @@
 	    <artifactId>spring-webmvc</artifactId>
 	    <version>5.3.7</version>
 	</dependency>
+	
+	<dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-core</artifactId>
+	    <version>5.5.2.Final</version>
+	</dependency>
+	
  	
   </dependencies>
 
