--- a/core/pom.xml
+++ b/core/pom.xml
@@ -14,6 +14,11 @@
 
 
   <dependencies>
+	  	<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		    <version>5.5.2.Final</version>
+		</dependency>
    
   </dependencies>
 
