--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -19,6 +19,24 @@
 		<artifactId>core</artifactId>
 		<version>1.0-SNAPSHOT</version>
     </dependency>   
+    
+   	
+	
+	
+	<dependency>
+	    <groupId>com.h2database</groupId>
+	    <artifactId>h2</artifactId>
+	    <version>1.4.200</version>
+	    <scope>test</scope>
+	</dependency>
+	
+	
+	
+	<dependency>
+	    <groupId>com.zaxxer</groupId>
+	    <artifactId>HikariCP</artifactId>
+	    <version>4.0.3</version>
+	</dependency>
      
       
   </dependencies>
