--- a/binding/pom.xml
+++ b/binding/pom.xml
@@ -13,11 +13,19 @@
 
 
   <dependencies>
-     <dependency>
+    <dependency>
       	<groupId>com.excilys</groupId>
 		<artifactId>core</artifactId>
 		<version>1.0-SNAPSHOT</version>
     </dependency> 
+    
+    <dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.12.3</version>
+	</dependency>
+    
+    
 
     
   </dependencies>
