--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -62,6 +62,12 @@
 	    <version>5.5.0</version>
 	</dependency>
 	
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-taglibs</artifactId>
+	    <version>5.5.0</version>
+	</dependency>
+	
 	
   </dependencies>
 
