--- a/service/pom.xml
+++ b/service/pom.xml
@@ -18,6 +18,18 @@
 		<artifactId>persistence</artifactId>
     </dependency> 
     
+    <dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-web</artifactId>
+	    <version>5.5.0</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-config</artifactId>
+	    <version>5.5.0</version>
+	</dependency>
+    
   </dependencies>
 
   
